@startuml

package "com.studentspace.sscore.user" {
    class User {
        - id: Long
        - username: String
        - name: String
        - surname: String
        - email: String
        - password: String
        <<Getter>>
        <<Setter>>
        + getAuthorities(): Collection<? extends GrantedAuthority>
        + getUsername(): String
        + isAccountNonExpired(): boolean
        + isAccountNonLocked(): boolean
        + isCredentialsNonExpired(): boolean
        + isEnabled(): boolean
    }

    class UserController {
        - userService: UserService
        + createUser(user: User): User
        + getUserById(id: Long): User
    }

    class UserService {
        - entityManager: EntityManager
        + getUserList(): List<User>
        + getUserById(id: Long): User
        + save(user: User): boolean
        + getUserByUsername(username: String): Optional<User>
    }
}

UserController --> UserService : uses
UserService --> User : uses
UserController <-- User : returns
@enduml
